WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124485
REGRESSION(
r159363
): [GTK] API break in webkit_dom_html_media_element_set_current_time
https://bugs.webkit.org/show_bug.cgi?id=124485
Summary
REGRESSION(r159363): [GTK] API break in webkit_dom_html_media_element_set_cur...
Carlos Garcia Campos
Reported
2013-11-18 01:35:56 PST
In
r159363
currentTime attribute was changed to not raise exceptions. This breaks the API of GObject DOM bindings because we use a GError parameter for exceptions that has been removed.
Attachments
Patch
(4.99 KB, patch)
2013-11-18 01:38 PST
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-11-18 01:38:53 PST
Created
attachment 217179
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-11-18 01:49:55 PST
Committed
r159406
: <
http://trac.webkit.org/changeset/159406
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug