Source/WebCore/bindings/gobject/WebKitDOMCustom.h
@@ -34,6 +34,15 @@ G_BEGIN_DECLS
 WEBKIT_API gboolean webkit_dom_html_text_area_element_is_edited(WebKitDOMHTMLTextAreaElement* input);
 
 /**
+ * webkit_dom_html_media_element_set_current_time:
+ * @self: A #WebKitDOMHTMLMediaElement
+ * @value: A #gdouble
+ * @error: #GError
+ *
+ */
+WEBKIT_API void webkit_dom_html_media_element_set_current_time(WebKitDOMHTMLMediaElement* self, gdouble value, GError** error);
+
+/**
  * webkit_dom_html_input_element_is_edited:
  * @input: A #WebKitDOMHTMLInputElement
  *
